syntax = "proto3";

package scheduler;

option go_package = "mentipedia/go-backend/signup/grpc/stubs"; 

message SingupEmailTokenString {
    // base-64 encoded. Includes HMAC for verification
    string token = 1;
}

message EmailRecipient {
    string mentirologo_name = 1;
    string mentirologo_email = 2;
}

message SignupEmailToken {
    int64  mentirologo_id = 1;
    string mentirologo = 2;
    string email = 3;
    // In seconds since Unix epoch
    int64 timestamp = 4;
}

message EmptyMsg { }

service SignupService {
    rpc SendSignupEmail(EmailRecipient) returns(EmptyMsg);
    // May return several errors if verification or unmarshalling fail
    rpc DecodeAndVerifyToken(SingupEmailTokenString) returns(SignupEmailToken);
}